--- a/app/src/main/res/layout/activity_lab4.xml
+++ b/app/src/main/res/layout/activity_lab4.xml
@@ -146,7 +146,8 @@
         android:layout_below="@+id/buttoncr"
         android:layout_toRightOf="@+id/textView7"
         android:layout_alignRight="@+id/Name3"
-        android:layout_alignEnd="@+id/Name3"/>
+        android:layout_alignEnd="@+id/Name3"
+        android:entries="@array/S1"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -164,7 +165,8 @@
         android:layout_alignTop="@+id/textView8"
         android:layout_toRightOf="@+id/textView8"
         android:layout_alignRight="@+id/Name3"
-        android:layout_alignEnd="@+id/Name3"/>
+        android:layout_alignEnd="@+id/Name3"
+        android:entries="@array/S2"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -183,7 +185,8 @@
         android:layout_alignRight="@+id/Name3"
         android:layout_alignEnd="@+id/Name3"
         android:layout_toRightOf="@+id/textView8"
-        android:layout_toEndOf="@+id/textView8"/>
+        android:layout_toEndOf="@+id/textView8"
+        android:entries="@array/S3"/>
 
     <Button
         android:layout_width="wrap_content"
